# SolisEngine

./: README.md  build.zig  build.zig.zon  meson.build
Resources/PS/: PS.gltf
Source/: Defines.hh  Game.cc  Game.hh  Main.cc  Math.hh  Module.hh  Util.hh  Window.cc  Window.hh
Source/Core/: Resource.hh  ResourceHandle.hh  ResourceManger.hh  Task.hh
Source/ECS/: ComponentStorage.hh  Entity.hh  Event.hh  Query.cti  Query.hh  World.cc  World.hh
Source/Game/: RandomThings.hh  Shooter.cc  Shooter.hh  TestGame.cc  TestGame.hh
Source/Plugins/SDL2_image/: SDL2ImgImporter.cc  SDL2ImgImporter.hh
Source/Plugins/assimp/: AssimpImporter.cc  AssimpImporter.hh
Source/Render/: Framebuffer.cc  IndexBuffer.cc  Material.cc  Material.hh  Mesh.cc  Mesh.hh  Program.cc  Program.hh  RenderTexture.cc  Renderable.hh  Renderer.cc  Shapes.hh  Texture.cc  Texture.hh  VertexAttributes.hh  VertexBuffer.cc  VertexData.hh
Source/Render/Common/: Renderer.hh
Source/Render/OpenGL/: IndexBuffer.hh  RendererGL.cc  RendererGL.hh  UniformBuffer.cc  UniformBuffer.hh  VAOManager.cc  VAOManager.hh  VertexBuffer.hh
Source/Render/Vulkan/: RendererVulkan.cc  RendererVulkan.hh
Source/Scene/: Camera.hh
assets/shaders/: default.frag  default.vert
src/: App.zig  Camera.zig  CommandBuffer.zig  Extent3d.zig  Gltf.zig  Handle.zig  Image.zig  Mesh.zig  PBRMaterial.zig  Renderer.zig  Transformation.zig  Window.zig  World.zig  assets.zig  defaults.zig  event.zig  external.zig  input.zig  light.zig  main.zig  matrix.zig  mesh.zig  quaternion.zig  render.zig  sample.zig  shader.h  solis.zig  type_id.zig  uuid.zig  vertex_data.zig  world.zig
src/assets/: ImageImporter.zig  Server.zig  handle.zig
src/core/: system_event.zig
src/input/: KeyboardInput.zig  MouseInput.zig
src/mesh/: Mesh.zig
src/render/: CommandBuffer.zig  EnvironmentMap.zig  GraphicsPipeline.zig  MeshBuffer.zig  RenderPass.zig  Renderer.zig  Shader.zig  ShaderImporter.zig  sampler.zig  texture.zig
src/renderer/: Buffer.zig  CommandBuffer.zig  EnvironmentMap.zig  GraphicsPipeline.zig  RenderPass.zig  Shader.zig  ShaderImporter.zig  sampler.zig  texture.zig
src/world/: World.zig  global.zig  query.zig
subprojects/: lockfree.wrap
